Closed
Bug 1846839
Opened 2 years ago
Closed 2 years ago
Remove leftovers from bug 1843663 and bug 1845540 that break uikit
Categories
(Core :: Widget, defect)
Core
Widget
Tracking
()
RESOLVED
FIXED
118 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox-esr115 | --- | unaffected |
| firefox116 | --- | unaffected |
| firefox117 | --- | wontfix |
| firefox118 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
error: no member named 'MozMacChromeActive' in 'mozilla::StyleSystemColor'
error: no member named 'MozMacChromeInactive' in 'mozilla::StyleSystemColor'
error: no member named 'MozMacMenushadow' in 'mozilla::StyleSystemColor'
error: no member named 'MozMacMenuselect' in 'mozilla::StyleSystemColor'; did you mean 'MozMacMenutextselect'?
error: no member named 'MozMacSecondaryhighlight' in 'mozilla::StyleSystemColor'
error: no member named 'DWMCompositor' in 'mozilla::LookAndFeel::IntID'
error: no member named 'WindowsClassic' in 'mozilla::LookAndFeel::IntID'
| Assignee | ||
Comment 1•2 years ago
|
||
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/21fe422b12b6
Remove leftovers from bug 1843663 and bug 1845540 that break uikit. r=mac-reviewers,bradwerth
Comment 3•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox118:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 118 Branch
Updated•2 years ago
|
status-firefox116:
--- → unaffected
status-firefox117:
--- → affected
status-firefox-esr102:
--- → unaffected
status-firefox-esr115:
--- → unaffected
Comment 4•2 years ago
|
||
The patch landed in nightly and beta is affected.
:glandium, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox117towontfix.
For more information, please visit BugBot documentation.
Flags: needinfo?(mh+mozilla)
| Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(mh+mozilla)
You need to log in
before you can comment on or make changes to this bug.
Description
•