Bug 1846839 - Remove leftovers from bug 1843663 and bug 1845540 that break uikit. r?mac-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D185207