widget/uikit/nsLookAndFeel.mm
@@ -167,15 +167,8 @@ nsresult nsLookAndFeel::NativeGetColor(ColorID aID, ColorScheme aScheme, nscolor
     case ColorID::MozColheaderhovertext:
       aResult = mColorDarkText;
       break;
-    case ColorID::MozMacChromeActive:
-    case ColorID::MozMacChromeInactive:
-      aResult = NS_RGB(0xaa, 0xaa, 0xaa);
-      break;
     case ColorID::MozMacFocusring:
       aResult = NS_RGB(0x3F, 0x98, 0xDD);
-      break;
-    case ColorID::MozMacMenushadow:
-      aResult = NS_RGB(0xA3, 0xA3, 0xA3);
       break;
     case ColorID::MozMacMenutextdisable:
       aResult = NS_RGB(0x88, 0x88, 0x88);
@@ -186,12 +179,8 @@ nsresult nsLookAndFeel::NativeGetColor(ColorID aID, ColorScheme aScheme, nscolor
     case ColorID::MozMacDisabledtoolbartext:
       aResult = NS_RGB(0x3F, 0x3F, 0x3F);
       break;
-    case ColorID::MozMacMenuselect:
-      aResult = NS_RGB(0xaa, 0xaa, 0xaa);
-      break;
     case ColorID::MozCellhighlight:
     case ColorID::Selecteditem:
-    case ColorID::MozMacSecondaryhighlight:
       // For inactive list selection
       aResult = NS_RGB(0xaa, 0xaa, 0xaa);
       break;
@@ -292,11 +281,6 @@ nsLookAndFeel::NativeGetInt(IntID aID, int32_t& aResult) {
       break;
     case IntID::TreeScrollLinesMax:
       aResult = 3;
-      break;
-    case IntID::DWMCompositor:
-    case IntID::WindowsClassic:
-      aResult = 0;
-      res = NS_ERROR_NOT_IMPLEMENTED;
       break;
     case IntID::TabFocusModel:
       aResult = 1;  // default to just textboxes
